styles/globals.css
/* ... */
.ReadMore:hover {
  color: orange;
  text-decoration: underline;
}
/* navbar styling */

.dropdown-submenu {
  position: relative;
}

.dropdown-submenu > .dropdown-menu {
  top: 0;
  left: 100%;
  margin-top: -6px;
  margin-left: -1px;
  -webkit-border-radius: 0 6px 6px 6px;
  -moz-border-radius: 0 6px 6px;
  border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover > .dropdown-menu {
  display: block;
}

.dropdown-submenu > a:after {
  display: block;
  content: " ";
  float: right;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
  border-width: 5px 0 5px 5px;
  border-left-color: #ccc;
  margin-top: 5px;
  margin-right: -10px;
}

.dropdown-submenu:hover > a:after {
  border-left-color: #fff;
}

.dropdown-submenu.pull-left {
  float: none;
}

.dropdown-submenu.pull-left > .dropdown-menu {
  left: -100%;
  margin-left: 10px;
  -webkit-border-radius: 6px 0 6px 6px;
  -moz-border-radius: 6px 0 6px 6px;
  border-radius: 6px 0 6px 6px;
}

/* footer-styling */
.copyright {
  font-family:'Work Sans', sans-serif;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  color: #fff;
  padding: 1rem;
  word-wrap: break-word;
  font-size: 22px;
}
.flex-container {
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
}

.flex-container > .footer_section {
  font-family: "chivo", sans-serif;
  width: 18rem;
  margin: 10px;
  font-size: 17px;
  line-height: 1.8rem;
}
.footer_section li > a,
.footer_section p > a {
  text-decoration: none;
  color: #113d63;
}
.flex-container > .footer_section > li {
  line-height: 2.5rem;
  cursor: pointer;
}
.footer_section li > a:hover,
.footer_section p > a:hover {
  text-decoration: none;
  color: orange;
}
.flex-container > .footer_section > li:hover {
  color: orange;
}
.footer_section {
  color: #113d63;
  font-weight: 700;
  list-style: none;
}

.footer_section h3 {
  color: #113d63;
  font-family: "Nunito", sans-serif;
  font-weight: bold;
  list-style: none;
}

.below-image-button {
  font-size: 16px;
  border: 0 2px 0 2px green;
  position: absolute;
  margin: 120px 0px 0px 10px;
  padding-top: 2rem;
  padding-bottom: 2rem;
  cursor: pointer;
  width: 80%;
}
@media only screen and (max-width: 600px) {
  .card-responsive {
    margin-bottom: 5rem;
  }
}
.imagebox5 {
  background-image: url("/assets/images/order-dashboard/Order fulfillment.png");
  background-position: center;
}
.imagebox6 {
  background-image: url("/assets/images/order-dashboard/sales & revenues.png");
  background-position: center;
}
.imagebox7 {
  background-image: url("/assets/images/order-dashboard/inventory usage.png");
  background-position: center;
}
.imagebox8 {
  background-image: url("/assets/images/order-fulfilment/pickup insights.png");
  background-position: center;
}
.imagebox9 {
  background-image: url("/assets/images/order-fulfilment/self delivery reports.png");
  background-position: center;
}
.imagebox10 {
  background-image: url("/assets/images/order-fulfilment/delivery partner.png");
  background-position: center;
}
/* .imagebox11 {
  background-image: url("/assets/images/order-dashboard/order-dashboard-hero2@2x.png");
  background-position: left;
  background-size: 130vh;
  background-repeat: no-repeat;
  height: 80vh;
} */

.imagebox12 {
  background-image: url("/assets/images/order-dashboard/order-dashboard-hero2@2x.png");
}
.imagebox13 {
  background-image: url("/assets/images/order-dashboard/DailyOS-Notifications@2x.png");
}
.imagebox14 {
  background-image: url("/assets/images/order-dashboard/DailyOS-Notifications@2x.png");
}
.imagebox15 {
  background-image: url("/assets/images/order-dashboard/print-KOTs@2x.png");
  background-position: center;
}
.imagebox16 {
  background-image: url("/assets/images/order-dashboard/print-KOTs@2x.png");
}
.imagebox17 {
  background-image: url("/assets/images/order-dashboard/print-KOTs@2x.png");
}
/* used in page-'order-routing-and-kitchen-display-system' */
.imagebox18 {
  background-image: url("/assets/images/order-routing/Digitalize-Kitchen-Operation5@2x.png");
  background-position: left;
  background-size: 200vh;
  background-repeat: no-repeat;
  height: 90vh;
}
/* used in page-'order-fulfillment' */

.imagebox20 {
  background-image: url("/assets/images/order-fulfilment/delivery@2x.png");
}
/* .accompaniments_image {
  background-image: url("https://dailykit-244-www.s3.us-east-2.amazonaws.com/file-export-5773385-1620227535366-0/dailykit-assets/hardwareee.png");
} */
.onDemandCategories {
  list-style-type:disc;
  font-family: Work Sans;
}
.onDemandCategories li {
  margin-bottom: 2rem;
}
.onDemandCategories2 {
  margin-left:20px;
  list-style-type:disc;
  font-family: Work Sans;
}
.onDemandCategories2 li {
  margin-bottom: 12px;
}
.nunito {
  font-family: "Nunito", sans-serif;
}

/* videoheader */
.image {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Nunito", sans-serif;
  font-weight: bolder;
}
.header {
  padding-top: 200px;
  position: absolute;
  text-align: center;
}
.videoTag_btn {
  padding: 10px 10px 10px 10px;
}
.video-1 {
  background: #212529;
}
/* videobanner */
@media only screen and (max-width: 600px) {
  /* body {
    margin: 0px 0px 0px 0px;
  } */
  .video-1 {
    margin-top: 10vh;
    width: 100%;
    height: 700px;
    overflow: hidden;
  }
  .header {
    padding-top: 0px;
    color: #fefdfc;
  }
}
/* vertical line */
.vl {
  border-left: 4px solid #8ac03b;
  height: 50px;
  display: inline-block;
  margin-left: 20px;
}

@media only screen and (max-width: 600px) {
  .vl {
    display: none;
  }
}

.blackline {
  border-left: 3px solid #ffffff;
  height: 230px;
  display: inline-block;
  margin-left: 20px;
  margin-right: -90px;
}
.column:hover {
  background: #f8f8f7;
  box-shadow: 2px 2px 3px 3px #e7e7e6;
}
/* ... */

